--- a/src/app/components/post/post-form/post-form.component.html
+++ b/src/app/components/post/post-form/post-form.component.html
@@ -2,8 +2,8 @@
     <form (ngSubmit)="onSubmit($event)">
         <input type="text" name="title" class="post-title" placeholder="Post title..." [(ngModel)]="post.title" [disabled]="loader"><br>
         <textarea name="content" cols="60" rows="5" class="post-content" placeholder="Post content..." [(ngModel)]="post.content" [disabled]="loader"></textarea><br>
-        <label class="post-livechat-timeout">Live chat timeout: <input type="number" name="livechat-timeout" [(ngModel)]="post.liveChatExpires"> Days</label><br>
-        
+        <label class="post-livechat-timeout" *ngIf = "! loader">Extend live chat timeout: <input type="number" name="livechat-timeout" [(ngModel)]="post.liveChatExpires">Days</label>
+        <span>{{ loader ? 'Live Chat Timeout: ' + lib.secondToTimeFormat(post.liveChatExpires - lib.nowInSeconds() + 1) : '' }}</span><br>
         <div class="file-container d-flex align-items-center justify-content-center" *ngIf="post.data && post.data.length > 0">
             <div class="file-list" *ngFor="let data of post.data">
                 <img [src]="data.thumbnailUrl ? data.thumbnailUrl : data.url" alt="">
@@ -12,12 +12,12 @@
         </div>
         
         <app-file-upload
-            class="left"
-            [hidden] = "loader"
-            [pathToStorage]="'posts/' + post.id"
-            [data]="post.data"
-            (uploadStart)="loader = true"
-            (uploadDone)="onUploadDone($event)"
+        class="left"
+        [hidden] = "loader"
+        [pathToStorage]="'posts/' + post.id"
+        [data]="post.data"
+        (uploadStart)="loader = true"
+        (uploadDone)="onUploadDone($event)"
         ></app-file-upload>
         <button class="btn btn-primary right" [disabled]="loader">Submit</button>
     </form>
