--- a/src/app/components/comment/comment-live.component.html
+++ b/src/app/components/comment/comment-live.component.html
@@ -1,4 +1,4 @@
-
+LIVE
 
 <div class="loader" *ngIf="loader.commentList">Loading comments. Please wait.</div>
 <div class="chat-box" >
@@ -20,3 +20,4 @@
   </div>
 </div>
 
+  
