--- a/src/app/components/post/post-item/post-item.component.scss
+++ b/src/app/components/post/post-item/post-item.component.scss
@@ -10,6 +10,13 @@
                 color: $secondary-color;
                 border-bottom: 1px solid $secondary-color;
             }
+            .info {
+                font-size: 0.9em;
+            }
+        }
+
+        .content-container {
+            padding: 0.5em;
         }
     }
     .author-container {
