--- a/src/app/components/post/post-form/post-form.component.scss
+++ b/src/app/components/post/post-form/post-form.component.scss
@@ -18,11 +18,14 @@
             padding: 0.5em;
             margin: 0;
             @include no-select;
+            input {
+                width: 5em;
+            }
         }
         
         .file-container {
             margin: 0.5em;
-            overflow: scroll;
+            overflow-x: scroll;
             background-color: $primary-shade;
             img {
                 max-width: 10em;
