--- a/src/app/components/comment/comment-item/comment-item.component.scss
+++ b/src/app/components/comment/comment-item/comment-item.component.scss
@@ -1,4 +1,5 @@
 @import '~sass/variables';
+@import '~sass/mixins';
 
 .comment {
     padding: 0.5em;
@@ -46,14 +47,5 @@
     
 }
 
-.file-container {
-    margin: 0.5em;
-    overflow-x: scroll;
-    background-color: $primary-shade;
-    img {
-        max-width: 10em;
-        max-height: 10em;
-        margin: 0.3em;
-    }
-}
+@include file-container();
 
